--- a/ethics/style.css
+++ b/ethics/style.css
@@ -1,3 +1,12 @@
+
+.wrapper{
+    background-image: url("/images/bg.jpg") ;
+    background-repeat: no-repeat;
+
+}
 #loginwrapper,#regwrapper{
-    margin-top: 150px;
+    margin-top: 260px;
+    border: 1px solid white ;
+    padding: 5px;
+    box-shadow: black 3px;
 }
