--- a/ethics/style.css
+++ b/ethics/style.css
@@ -1,6 +1,6 @@
 
 .wrapper{
-    background-image: url("/images/bg.jpg") ;
+    background-image: url("/ethics/images/bg.jpg") ;
     background-repeat: no-repeat;
 
 }
